package com.github.meeplemeet.ui.navigation

object NavigationTestTags {
  const val BOTTOM_NAVIGATION_MENU = "BottomNavigationMenu"
  const val GO_BACK_BUTTON = "GoBackButton"
  const val TOP_BAR_TITLE = "TopBarTitle"
  const val SESSIONS_TAB = "OverviewTab"
  const val DISCUSSIONS_TAB = "MapTab"
  const val DISCOVER_TAB = "DiscoverTab"
}
